<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_campus"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_campus" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_twitter" />
    </group>
</menu>
